# ml-platform-infrastructure-on-kubernetes

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-smoke.yml
docs/: ARCHITECTURE.md  MODEL_REGISTRY_FLOW.md  PORTFOLIO_EVIDENCE.md  RUNBOOK.md  architecture.md  cost-estimate.md  incident-response.md  runbook.md  security-controls.md
helm/ml-platform/: Chart.yaml  values.yaml
helm/ml-platform/templates/: deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
kubernetes/argocd/: application.yaml
kubernetes/monitoring/: grafana-dashboard.json
ml_platform/: metrics.py  scoring.py
models/: sample_model.json
scripts/: validate_layout.py
services/model-api/: Dockerfile  app.py
tests/: test_platform_files.py  test_scoring.py
