[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-platform-infrastructure-on-kubernetes"
version = "0.1.0"
description = "Kubernetes ML platform infrastructure with model serving, Helm, GitOps, and observability."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
serve = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
mlflow = ["mlflow>=2.15"]

[tool.setuptools.packages.find]
include = ["ml_platform*"]
